Refactor jobController: Comment out admin role checks and job creation logic; update job retrieval methods
Fix reminderController: Correct sequelize import statement

Update company model: Remove userId field from Company definition

Revise notes.txt: Update to-do list for upcoming tasks

Adjust dashboard HTML: Update links for managing notes and viewing jobs

Add job applications page: Create jobApplications.html with form and job listing

Implement job applications JS: Add functionality for creating, fetching, and deleting job applications

Create jobs page: Add jobs.html for displaying available job listings

Develop jobs JS: Implement job fetching and saving functionality

Add notes management page: Create notes.html for managing user notes

Implement notes JS: Add functionality for creating, updating, and deleting notes

Create reminders page: Add reminder.html for setting and viewing reminders

Implement reminders JS: Add functionality for managing reminders

Update job application routes: Modify routes for job applications to streamline API calls

Refactor job routes: Comment out admin checks and adjust job retrieval methods

Enhance server.js: Add routes for job, notes, reminder, and job application pages

Add AWS S3 service: Implement file upload functionality to S3

--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -50,14 +50,14 @@
       <div class="card-header">Notes</div>
       <div class="card-body">
         <p>This section will show your latest notes per application.</p>
-        <a href="/notes.html" class="btn btn-primary btn-sm">Manage Notes</a>
+        <a href="/notes/notes.html" class="btn btn-primary btn-sm">Manage Notes</a>
       </div>
     </div>
 
     <div class="card mb-4">
         <div class="card-header d-flex justify-content-between align-items-center">
           <span>Jobs</span>
-          <a href="/user/jobs.html" class="btn btn-success btn-sm">View Jobs</a>
+          <a href="/jobs/jobs.html" class="btn btn-success btn-sm">View Jobs</a>
         </div>
         <div class="card-body text-muted">
           Explore posted jobs and apply to those that match your interests.
@@ -68,9 +68,9 @@
     <div class="card">
       <div class="card-header">Quick Actions</div>
       <div class="card-body">
-        <a href="/add-application.html" class="btn btn-success">+ New Application</a>
-        <a href="/reminders.html" class="btn btn-warning">📧 View Reminders</a>
-        <a href="/profile.html" class="btn btn-secondary">⚙️ Edit Profile</a>
+        <a href="/jobApplications/jobApplications.html" class="btn btn-success">+ New Application</a>
+        <a href="/reminder/reminder.html" class="btn btn-warning">📧 View Reminders</a>
+        <a href="/profile/profile.html" class="btn btn-secondary">⚙️ Edit Profile</a>
       </div>
     </div>
   </div>
