feat: Enhance job application functionality with S3 file upload, job ID handling, and UI improvements

--- a/public/jobs/jobs.html
+++ b/public/jobs/jobs.html
@@ -20,7 +20,10 @@
             <p class="card-text">Develop and maintain responsive web applications using React and modern web technologies.</p>
             <p><strong>Type:</strong> Full-time</p>
             <p><strong>Salary:</strong> $70,000 - $90,000</p>
-            <button class="btn btn-outline-primary save-btn" onclick="toggleSave(this)">Save</button>
+            <div class="d-flex gap-2">
+              <button class="btn btn-outline-primary save-btn" onclick="toggleSave(this)">Save</button>
+              <a href="/jobsApplication/jobApplication.html?companyId=1&jobId=1" class="btn btn-primary">Apply</a>
+            </div>
           </div>
         </div>
       </div>
@@ -34,7 +37,10 @@
             <p class="card-text">Build APIs and backend services using Node.js and PostgreSQL.</p>
             <p><strong>Type:</strong> Part-time</p>
             <p><strong>Salary:</strong> $40/hr</p>
-            <button class="btn btn-outline-primary save-btn" onclick="toggleSave(this)">Save</button>
+            <div class="d-flex gap-2">
+              <button class="btn btn-outline-primary save-btn" onclick="toggleSave(this)">Save</button>
+              <a href="/jobApplications/jobApplications.html?companyId=2&jobId=2" class="btn btn-primary">Apply</a>
+            </div>
           </div>
         </div>
       </div>
@@ -48,7 +54,10 @@
             <p class="card-text">Design user-centric web and mobile interfaces with Figma and Adobe XD.</p>
             <p><strong>Type:</strong> Freelance</p>
             <p><strong>Salary:</strong> $50/hr</p>
-            <button class="btn btn-outline-primary save-btn" onclick="toggleSave(this)">Save</button>
+            <div class="d-flex gap-2">
+              <button class="btn btn-outline-primary save-btn" onclick="toggleSave(this)">Save</button>
+              <a href="/jobApplication/jobApplication.html?companyId=3&jobId=3" class="btn btn-primary">Apply</a>
+            </div>            
           </div>
         </div>
       </div>
@@ -57,8 +66,8 @@
     <a href="/dashboard/dashboard.html" class="btn btn-secondary mt-4">⬅ Back to Dashboard</a>
   </div>
 
-  <script src="/jobs/jobs.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="/jobs/jobs.js"></script>
 
 </body>
 </html>
