--- a/public/jobApplications/jobApplications.html
+++ b/public/jobApplications/jobApplications.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Add Job Application</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
 </head>
 <body class="bg-light">
   <div class="container py-5">
@@ -12,19 +12,19 @@
     <form id="jobApplicationForm" enctype="multipart/form-data" onsubmit="addJobApplication(event)">
       <div class="mb-3">
         <label for="companyName" class="form-label">Company Name</label>
-        <input type="text" class="form-control" id="companyName" required />
+        <input type="text" class="form-control" id="companyName"  name="companyName" required />
       </div>
       <div class="mb-3">
         <label for="jobTitle" class="form-label">Job Title</label>
-        <input type="text" class="form-control" id="jobTitle" required />
+        <input type="text" class="form-control" id="jobTitle" name="jobTitle" required />
       </div>
       <div class="mb-3">
         <label for="applicationDate" class="form-label">Application Date</label>
-        <input type="date" class="form-control" id="applicationDate" required />
+        <input type="date" class="form-control" id="applicationDate" name="applicationDate" required />
       </div>
       <div class="mb-3">
         <label for="status" class="form-label">Status</label>
-        <select class="form-select" id="status">
+        <select class="form-select" id="status" name="status">
           <option>Applied</option>
           <option>Interviewed</option>
           <option>Offered</option>
@@ -34,15 +34,15 @@
       </div>
       <div class="mb-3">
         <label for="notes" class="form-label">Notes</label>
-        <textarea class="form-control" id="notes" rows="3"></textarea>
+        <textarea class="form-control" id="notes" rows="3" name="notes"></textarea>
       </div>
       <div class="mb-3">
         <label for="location" class="form-label">Location</label>
-        <input type="text" class="form-control" id="location" />
+        <input type="text" class="form-control" id="location" name="location" />
       </div>
       <div class="mb-3">
         <label for="resume" class="form-label">Upload Resume</label>
-        <input type="file" class="form-control" id="resume" />
+        <input type="file" class="form-control" id="resume" name="resume" />
       </div>
       <button type="submit" class="btn btn-success">Submit</button>
     </form>
@@ -78,7 +78,7 @@
   
     <div class="mb-3">
       <button class="btn btn-primary" onclick="searchApplications()">Search</button>
-      <button class="btn btn-secondary" onclick="fetchApplications()">Reset</button>
+      <button class="btn btn-secondary" onclick="fetchJobApplications()">Reset</button>
     </div>
   
     <!-- Applications Table -->
@@ -97,8 +97,11 @@
       </thead>
       <tbody></tbody>
     </table>
+
+    <a href="/dashboard/dashboard.html" class="btn btn-secondary mt-4">⬅ Back to Dashboard</a>
   </div>
   
-  <script></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="/jobApplications/jobApplications.js"></script>
 </body>
 </html>
