feat: Update job application retrieval and reminder handling; enhance UI with job selection and modal for editing reminders

--- a/public/notes/notes.html
+++ b/public/notes/notes.html
@@ -17,6 +17,8 @@
     
     <!-- Notes List -->
     <div id="notesContainer" class="row gy-3"></div>
+
+    <a href="/dashboard/dashboard.html" class="btn btn-secondary mt-4">⬅ Back to Dashboard</a>
   </div>
   
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
