--- a/public/profile/profile.html
+++ b/public/profile/profile.html
@@ -91,6 +91,7 @@
         </form>
       </div>
     </div>
+    <a href="/dashboard/dashboard.html" class="btn btn-secondary mt-4">⬅ Back to Dashboard</a>
   </div>
 
 <script src="/profile/profile.js"></script>
