--- a/public/reminder/reminder.html
+++ b/public/reminder/reminder.html
@@ -15,9 +15,11 @@
       <div class="card-body">
         <form id="reminderForm">
           <div class="mb-3">
-            <label for="jobId" class="form-label">Job Application ID</label>
-            <input type="number" class="form-control" id="jobId" required>
-          </div>
+            <label for="jobId" class="form-label">Select Job Application</label>
+            <select id="jobId" class="form-select" required>
+              <option value="">Loading applications...</option>
+            </select>
+          </div>          
           <div class="mb-3">
             <label for="reminderDate" class="form-label">Reminder Date</label>
             <input type="datetime-local" class="form-control" id="reminderDate" required>
@@ -40,7 +42,38 @@
     </div>
   </div>
 
+  <!-- 🛠️ Edit Reminder Modal -->
+  <div class="modal fade" id="editReminderModal" tabindex="-1" aria-labelledby="editReminderModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="editReminderModalLabel">Edit Reminder</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form id="editReminderForm">
+            <input type="hidden" id="editReminderId">
+            <div class="mb-3">
+              <label for="editReminderMessage" class="form-label">Message</label>
+              <input type="text" class="form-control" id="editReminderMessage" required>
+            </div>
+            <div class="mb-3">
+              <label for="editReminderDate" class="form-label">Reminder Date</label>
+              <input type="datetime-local" class="form-control" id="editReminderDate" required>
+            </div>
+            <button type="submit" class="btn btn-primary">Update Reminder</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div>
+     <a href="/dashboard/dashboard.html" class="btn btn-secondary mt-4">⬅ Back to Dashboard</a>
+  </div>
+  
+  <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="/reminder/reminder.js"></script>
 </body>
 </html>
