refactor: Remove redundant dotenv configuration from multiple files

--- a/public/signup/signup.html
+++ b/public/signup/signup.html
@@ -36,7 +36,7 @@
   </head>
 
   <body>
-    <h1 class="app-title">Group Chat App</h1>
+    <h1 class="app-title">JOB TRACKER</h1>
     <div class="container">
       <div class="card">
         <form class="SignUp-form" id="SignUp-form" onsubmit="signUp(event)">
